# python-microservices

./: README.md
order-management/: pyproject.toml
order-management/app/: main.py
order-management/app/api/v1/: __init__.py  orders.py
order-management/app/core/: config.py
order-management/app/models/: order.py  order_item.py
order-management/app/schemas/: order.py
product-management/: README.md  products.db  pyproject.toml
product-management/app/: main.py
product-management/app/api/v1/: __init__.py  products.py
product-management/app/core/: config.py
product-management/app/db/: seed.py
product-management/app/models/: product.py
product-management/app/schemas/: product.py
product-management/tests/test_api/: test-requirements.py
