[project]
name = "order-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.22.0",
]
